# LLM-project

./: .env.example  .gitignore  CALENDAR_CHATBOT_README.md  chatbot_config.json  evaluation.py  eventgram_evaluation_report.json  eventgram_scores.csv  events.json  main.py  posts_data.json  pyproject.toml  rag_docs.json  streamlit_calendar_chatbot.py
data/: chat_history.json  chat_history_api.json  chat_history_calendar.json
data/metadata/: pinecone_insertions.json  scraped_provenance.json
pilots/: APIScraper.py  image_transcibe.py
server/: README.md  app.py  fastapi_chatbot_server.py
src/: calendar_creator.py  goog_oauth.py  pinecone_rag.py  scrape_events.py
